# pi-pm

./: .gitignore  README.md  env-setup.sh
fake-api/: index.js  package-lock.json  package.json
fake-api/public/apps/: code.app
fake-api/public/db/: db.json
pi/: Cargo.toml
pi/root/etc/: pi-conf.json
pi/root/store/cache/: nodejs.app
pi/root/store/db/: installed.json  registry.json  store.json
pi/src/: cli_args.rs  main.rs
pi/src/config/: config.rs
pi/src/database/: db.rs  sync.rs
pi/src/helpers/: REST.rs  download.rs  extract.rs  file.rs  mod.rs
pi/src/interfaces/: installer.rs  remover.rs  search.rs  updater.rs
pi/src/operations/: install.rs  mod.rs  remove.rs  search.rs  update.rs
pi/src/schemas/: app.rs  config.rs  mod.rs
