[package]
name = "pi"
version = "0.1.0"
authors = ["mrrbrilliantwork@gmail.com <phalbrilliant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0.55"
curl = "0.4.29"
colored = "1.9.3"
itertools ="0.9.0"
flate2 = "1.0.16"
tar = "0.4.29"